# subchar-mt

./: .gitignore  LICENSE  README.md  SUPERCOMPUTER_README.md  claude_roadmap.md  encoder.py  finetune_experiment.py  main.py  pyproject.toml  requirements-finetune.txt  requirements.txt  run_finetuning.sh
data/: HK_RatingsNorm_2022.xlsx  cangjie.txt  wubi.txt  zh_sp.model  zh_sp.vocab
latex/: custom.bib  main.aux  main.bbl  main.blg  main.tex
notes/: research_log.md
results/gloss_injection/: nllb-600M_glossed_all_preds.json  nllb-600M_glossed_transparent_only_preds.json  nllb-600M_unglossed_preds.json  opus-mt_glossed_all_preds.json  opus-mt_glossed_transparent_only_preds.json  opus-mt_unglossed_preds.json
scripts/: run_bootstrap.sh  run_finetuning.sh  run_finetuning_v2.sh  run_finetuning_v3.sh  run_finetuning_v4.sh  run_finetuning_v5.sh  run_finetuning_zhja.sh  run_gloss_injection.sh  run_llm_eval.sh  run_llm_eval_aya8b.sh  run_llm_eval_qwen72b.sh  run_probing.sh
src/: aggregate_results.py  aggregate_v4.py  aggregate_v5.py  aggregate_zhja.py  encoder.py  finetune_experiment.py  finetune_experiment_v3.py  finetune_experiment_v4.py  finetune_experiment_v5.py  finetune_experiment_zhja.py  gloss_injection.py  llm_eval.py  paper_tables.py  run_pooled_bootstrap.py  run_probing.py  significance_test.py  train_sentencepiece.py
src/analysis/: probing.py  transparency_analysis.py
