[project]
name = "subchar-mt"
version = "0.1.0"
description = "Sub-character representations for low-resource Chinese MT with LoRA"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "accelerate>=1.1.0",
    "peft",
    "unbabel-comet",
    "sacrebleu>=2.3.0",
    "jieba",
    "pypinyin",
    "opencc",
    "dragonmapper",
    "sacremoses",
    "sentencepiece",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "setuptools<75",
    "scikit-learn>=1.7.2",
    "stanza>=1.12.2",
    "openpyxl>=3.1.5",
    "opencc-python-reimplemented>=0.1.7",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
